--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.2",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
-    "mongoose": "^9.1.6"
+    "helmet": "^8.1.0",
+    "mongoose": "^9.1.6",
+    "morgan": "^1.10.1"
   }
 }
